# nebiosig

./: CMakeLists.txt  README.md
include/: nebiosig.h  signal.h
src/: edf.cpp  edf.h  main.cpp  signal.cpp  signal.h
